cmake_minimum_required(VERSION 3.20)
project(V1_0)

set(CMAKE_CXX_STANDARD 14)

add_executable(V1_0 V1.0.cpp compare_alphabet.h compare_alphabet.cpp create_file.h create_file.cpp is_alphabetic.h is_alphabetic.cpp mediana.h mediana.cpp rand_int.h rand_int.cpp sort.h sort.cpp student_print.h student_print.cpp studentas.h test_file.h test_file.cpp write_to_file.h write_to_file.cpp)
